# rustvim

./: .gitignore  .pre-commit-config.yaml  .rustvimrc.example  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md  TODO.md  flake.nix  test_file.txt
docs/: INSERT_MODE_KEYMAP_REFACTORING.md  PLUGIN_SYSTEM.md  README.md  REFACTOR_SUMMARY.md  SEARCH_REFACTORING_COMPLETE.md
scripts/: README.md  coverage.sh  install-pre-commit-hook.sh  pre-commit-hook.sh
src/: buffer.rs  commands.rs  config.rs  editor.rs  gap_buffer.rs  history.rs  input.rs  io.rs  keymap.rs  lib.rs  main.rs  plugin.rs  syntax.rs  terminal.rs
tests/: additional_command_tests.rs  buffer_gap_integration_tests.rs  buffer_tests.rs  change_text_object_tests.rs  command_mode_keymap_tests.rs  command_mode_tests.rs  config_tests.rs  daily_tests.rs  edit_command_tests.rs  ex_command_tests.rs  file_io_tests.rs  gap_buffer_tests.rs  global_keymap_config_tests.rs  history_tests.rs  insert_mode_keymap_tests.rs  integration_tests.rs  key_enum_tests.rs  keymap_tests.rs  load_files_tests.rs  motion_calculator_tests.rs  newline_preservation_tests.rs  plugin_system_tests.rs  real_backspace_undo.rs  search_mode_keymap_tests.rs  search_tests.rs  status_tests.rs  syntax_highlighting_tests.rs  terminal_syntax_tests.rs  ui_enhancements_tests.rs  undo_redo_line_numbers_tests.rs  visual_block_mode_tests.rs  visual_mode_basic_tests.rs  visual_mode_delete_undo_tests.rs  visual_mode_keymap_integration_tests.rs  visual_mode_keypress_tests.rs  visual_mode_multi_buffer_tests.rs  visual_mode_tests.rs  (+1 more)
(+30 files in other folders)
