[package]
name = "rustvim"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-c = "0.20"
tree-sitter-json = "0.19"
tree-sitter-markdown = "0.7"

[dev-dependencies]
tempfile = "3.0"
cargo-llvm-cov = "0.6"